# ShaderConductor

./: .travis.yml  BuildAll.py
Source/: CMakeLists.txt
Source/Core/: CMakeLists.txt  ShaderConductor.cpp
